--- a/etc/backends/azure/test.yml
+++ b/etc/backends/azure/test.yml
@@ -3,3 +3,6 @@ fixtures_dir: <%= File.join(Rails.application.config.rocci_server_etc_dir, 'back
 management_certificate: '/dev/zero' # path to *.pem or *.pfx file
 subscription_id: 'dummy_subscription_id' # your subscription id
 management_endpoint: 'http://management.localhost' # Azure endpoint (zone)
+location: West Europe
+tcp_endpoints: [22,5985,5986]
+ssh_port: 22
